add swagger docs for cdn, movie, search and tv controllers
